# MOX001-WebService

./: .dockerignore  .gitignore  Dockerfile  README.md  README_FOR_DEV.md  docker-compose.yml  pyproject.toml  run.py
alembic/: README.md  env.py
nginx-conf.d/: nginx.config
src/: database.py  main.py  settings.py
src/users/: models.py  router.py  schemas.py  utils.py
src/users/utils/: hash_password.py
src/utils/: responses.py  schemas.py  sql_columns.py
tests/: conftests.py
tests/auth/: test_jwt.py  test_password.py  tests_api_auth.py
